Initial changes to support multiple players per user
